--- a/H4_Group_12/app/src/main/AndroidManifest.xml
+++ b/H4_Group_12/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-permission android:name="android.permission.INTERNET" />
         <service android:name=".WeatherService"/>
         <activity
             android:name=".MainActivity"
