--- a/H4_Group_12/app/src/main/AndroidManifest.xml
+++ b/H4_Group_12/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/omgevil"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <service android:name=".WeatherService"/>
