--- a/TeamProject/app/src/main/AndroidManifest.xml
+++ b/TeamProject/app/src/main/AndroidManifest.xml
@@ -9,12 +9,28 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/northside" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ArtistActivity"
+            android:label="@string/northside" >
+        </activity>
+        <activity
+            android:name=".MapActivity"
+            android:label="@string/northside" >
+        </activity>
+        <activity
+            android:name=".CalenderActivity"
+            android:label="@string/northside" >
+        </activity>
+        <activity
+            android:name=".InfoActivity"
+            android:label="@string/northside" >
         </activity>
     </application>
 
