--- a/TeamProject/app/src/main/AndroidManifest.xml
+++ b/TeamProject/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.victor.teamproject" >
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/omgporo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <service android:name=".WeatherService"></service>
+        <service android:name=".WeatherService"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/northside" >
