Info activity finish

--- a/TeamProject/app/src/main/AndroidManifest.xml
+++ b/TeamProject/app/src/main/AndroidManifest.xml
@@ -37,10 +37,13 @@
             android:name=".CalenderActivity"
             android:label="@string/northside" >
         </activity>
-        <activity
-            android:name=".InfoActivity"
-            android:label="@string/northside" >
+        <activity android:name=".InfoActivity"
+            android:label="@string/info">
         </activity>
+
+        <meta-data
+            android:name="http://api.openweathermap.org/data/2.5/weather?q="
+            android:value="e811d8c7f975fd0c90bb2549468cdbda"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
