Ændringer til style i maps
Lidt color ændring til search knappen og dialog

--- a/TeamProject/app/src/main/AndroidManifest.xml
+++ b/TeamProject/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/northside" >
+            android:label="@string/northside"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,7 +56,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
