Tilføjet layout for xlarge screens.
Har tilføjet layouts for alle xml filer for xlarge - testet på tablet og
det virker.
Har låst artistview til portræt da der forekommer fejl ved tiltning, pga
en onresume ikke kalder de metoder den skal.

--- a/TeamProject/app/src/main/AndroidManifest.xml
+++ b/TeamProject/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         </activity>
         <activity
             android:name="dk.itsmap.e15.grp4.ArtistActivity"
-            android:label="@string/northside" >
+            android:label="@string/northside"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="dk.itsmap.e15.grp4.CalenderActivity"
