--- a/TeamProject/app/src/main/AndroidManifest.xml
+++ b/TeamProject/app/src/main/AndroidManifest.xml
@@ -32,8 +32,7 @@
         </activity>
         <activity
             android:name="dk.itsmap.e15.grp4.ArtistActivity"
-            android:label="@string/northside"
-            android:screenOrientation="portrait">
+            android:label="@string/northside">
         </activity>
         <activity
             android:name="dk.itsmap.e15.grp4.CalenderActivity"
